[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhncloud-exporter"
version = "0.1.0"
description = "NHN Cloud Custom Prometheus Exporter (LB, CDN, RDS)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "prometheus_client>=0.20.0,<1.0.0",
]

[project.scripts]
nhncloud-exporter = "nhncloud_exporter.main:main"

[tool.setuptools.packages.find]
where = ["src"]
